# Minesweeper

./: .gitignore  Dockerfile  README.md  buildFront.sh  docker-compose-prod.yml  docker-compose.yml  entrypoint-prod.sh  entrypoint.sh  nginx  nginx2  pyproject.toml  requirements.txt  resetProyect.sh
apps/cell/: __init__.py  admin.py  apps.py  models.py
apps/cell/api/: api_rest.py  serializers.py
apps/cell/api/v1/: serializers.py  urls.py  views.py
apps/cell/tests/: test_models.py
apps/game/: __init__.py  admin.py  apps.py  models.py
apps/game/api/: api_rest.py  serializers.py
apps/game/api/v1/: serializers.py  urls.py  views.py
apps/game/tests/: test_models.py
apps/glide/: __init__.py  apps.py
apps/glide/resource/: departments.json  offices.json
apps/glide/services/: BaseServices.py  departments.py  employees.py  offices.py
apps/user/: __init__.py  admin.py  apps.py  models.py  permissions.py
docker/: Dockerfile  entrypoint-prod.sh  entrypoint.sh  example.env
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  app-material.ts  index.css  index.js  index.tsx
frontend/src/components/: About.tsx  App.jsx  Board.js  Cell.js  Const.js  Contact.tsx  Dashboard.tsx  DropData.tsx  Game.jsx  Loading.jsx  Login.jsx  Porfolio.tsx  Portfolio.tsx  SignUp.jsx  Terms.tsx  WhatIDo.tsx
frontend/src/context/: GlobalState.js  my-context.js
frontend/src/source/: sagas.ts  store.ts
frontend/src/utils/: api.ts  auth.ts
web/: settings.py  urls.py
web/settings/: base.py  dev.py  prod.py
(+17 files in other folders)
