[tool.poetry]
name = "code"
version = "0.1.0"
description = "something"
authors = ["ivan"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
psycopg2 = "^2.8.5"
django-cors-headers = "^3.4.0"
djangorestframework = "^3.11.1"
markdown = "^3.2.2"
django-filter = "^2.3.0"
django-rest-auth = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
