[tool.poetry]
name = "code"
version = "0.1.0"
description = "something"
authors = ["ivan"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
psycopg2 = "^2.8.5"
django-cors-headers = "^3.4.0"
djangorestframework = "^3.11.1"
markdown = "^3.2.2"
django-filter = "^2.3.0"
django-rest-auth = "^0.9.5"
Faker = "^4.1.2"
coreapi = "^2.3.3"
django-allauth = "^0.42.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
